fixed max video size and horizontal scroll bar

--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,9 @@ body {
   font-family: 'Anek Kannada', sans-serif;
   margin: 0; /* Ensure body has no margin */
   padding: 0; /* Ensure body has no padding */
+  width: 100%;
+  overflow-x: hidden; /* Prevent horizontal scroll */
+
 }
 
 
@@ -121,10 +124,10 @@ h1 {
 
         .video-container {
             width: calc(100% - 40px); /* 40px total padding (20px on each side) */
-            max-width: 100%; /* Ensure the video doesn’t exceed 100% of the container */
+            max-width: 900px; /* Ensure the video doesn’t exceed 100% of the container */
             padding: 0 2px; /* Left and right padding */
             box-sizing: border-box; /* Include padding in the width calculation */
-            margin: 0 auto 0px; /* Center the container and add space below each video */
+            margin: 0 0 30px 20px; /* Add left margin for alignment and space below each video */
         }
 
         .video-wrapper {
